--- a/src/user/component/uvaccinations/vaccinations.component.css
+++ b/src/user/component/uvaccinations/vaccinations.component.css
@@ -1,69 +1,86 @@
 main {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    padding: 50px;
-    font-family: "Roboto", sans-serif;
-  }
-  
-  .card {
-    width: 250px;
-    height: 300px;
-    border-radius: 10px;
-    overflow: hidden;
-    cursor: pointer;
-    position: relative;
-    color: #000000;
-    box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.2);
-  }
-  .card img {
-    position: absolute;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    opacity: 0.9;
-    transition: opacity 0.2s ease-out;
-  }
-  .card h2 {
-    position: absolute;
-    inset: auto auto 30px 30px;
-    margin: 0;
-    transition: inset 0.3s 0.3s ease-out;
-    font-family: "Roboto Condensed", sans-serif;
-    font-weight: normal;
-    text-transform: uppercase;
-  }
-  .card p, .card a {
-    position: absolute;
-    opacity: 0;
-    max-width: 80%;
-    transition: opacity 0.3s ease-out;
-  }
-  .card p {
-    inset: auto auto 80px 30px;
-  }
-  .card a {
-    inset: auto auto 40px 30px;
-    color: inherit;
-    text-decoration: none;
-  }
-  .card:hover h2 {
-    inset: auto auto 220px 30px;
-    transition: inset 0.3s ease-out;
-  }
-  .card:hover p, .card:hover a {
-    opacity: 1;
-    transition: opacity 0.5s 0.1s ease-in;
-  }
-  .card:hover img {
-    transition: opacity 0.3s ease-in;
-    opacity: 1;
-  }
-  
-  .material-symbols-outlined {
-    vertical-align: middle;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  background-color: beige;
+  padding: 50px;
+  font-family: "Roboto", sans-serif;
+}
+
+.card {
+  width: 250px;
+  height: 300px;
+  border-radius: 10px;
+  cursor: pointer;
+  background: lightblue;
+  position: relative;
+  color: #000000;
+  box-shadow: 0 7px 10px  rgba(0, 0, 0, 0.5);
+}
+.card:hover {
+  transform: translateY(20px);
+}
+.card:hover:before {
+  opacity: 1;
+}
+.card:hover .info {
+  opacity: 1;
+  transform: translateY(0px);
+}
+.card:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 2;
+  transition: 0.5s;
+  opacity: 0;
+}
+.card img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 15px;
+}
+.card .info {
+  position: relative;
+  z-index: 3;
+  color: black;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: 0.5s;
+}
+.card .info h1 {
+  margin: 0px;
+}
+.card .info p {
+  letter-spacing: 1px;
+  font-size: 15px;
+  margin-top: 8px;
+}
+.card .info button {
+  padding: 0.6rem;
+  outline: none;
+  border: none;
+  border-radius: 3px;
+  background: white;
+  color: black;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.4s ease;
+}
+.card .info button:hover {
+  background: dodgerblue;
+  color: white;
+}
