--- a/src/user/component/uvaccinations/vaccinations.component.html
+++ b/src/user/component/uvaccinations/vaccinations.component.html
@@ -1,9 +1,10 @@
 <main>
-  <div class="card" *ngFor="let vaccination of vaccinations">
-    <div class="card-content">
-          <h2>{{ vaccination.name}}</h2>
-          <p><strong></strong> {{ vaccination.description }}<br/>
-          <strong>Price:</strong> {{ vaccination.price }}</p><br/>
+  <div *ngFor="let i of imageDetail; let index = index" class="card">
+    <img src={{i.imageUrl}} width={{i.width}} height={{i.height}} alt={{i.imageName}}/> 
+    <div class="info">
+          <h2>{{ vaccinations[index].name}}</h2>
+          <p><strong></strong> {{ vaccinations[index].description }}<br/>
+          <strong>Price:</strong> {{ vaccinations[index].price }}</p><br/>
   </div>
   </div>
   </main>
