--- a/src/admin/component/employee/employee.component.html
+++ b/src/admin/component/employee/employee.component.html
@@ -51,11 +51,11 @@
         <span><strong>Phone Number:</strong> {{ employee.phoneNumber }}</span><br>
         <span><strong>Email:</strong> {{ employee.email }}</span><br>
         <span><strong>Hire Date:</strong> {{ employee.hireDate | date }}</span><br>
-        <span><strong>Address:</strong></span><br>
-        <span>{{ employee.addresses.street}}</span>, 
+        <!-- <span><strong>Address:</strong></span><br> -->
+        <!-- <span>{{ employee.addresses.street}}</span>, 
         <span>{{ employee.addresses.city}}</span>, 
         <span>{{ employee.addresses.state}}</span> - 
-        <span>{{ employee.addresses.zipCode}}</span><br>
+        <span>{{ employee.addresses.zipCode}}</span><br> -->
         <span><strong>Role:</strong> {{ employee.role }}</span><br>
         <button (click)="editEmployee(i)">Edit</button>
       </div>
