--- a/src/AuthenticationModule/admin-login/admin-login.component.css
+++ b/src/AuthenticationModule/admin-login/admin-login.component.css
@@ -1,25 +1,122 @@
-.background {
-    background-image: url('/assets/images/login3.jpg'); /* Path to your image */
-    background-size: 1250px 600px;         /* Ensure the image covers the full area */
-    background-position: center;    /* Center the image */
-    background-repeat: no-repeat;   /* Avoid repeating the image */
-    height: 100vh;                  /* Full viewport height */
-    width: 100%;                    /* Full width of the page */
-    display: flex;                  /* Use flexbox for layout */
-    justify-content: center;      /* Align content to the right */
-    align-items: center;            /* Center the content vertically */
-  }
-  
-  .content {
-    max-width: 400px;               /* Limit the width of the login form */
-    width: 100%;                    /* Ensure responsiveness */
-    margin-right: 30px;             /* Add some spacing from the edge */
-    transform: translateY(-60px);
-  }
-
-  .error {
-    color: red;
-    font-size: 0.9em;
-    margin-top: 5px;
+body{
+  font-family: 'Libre Baskerville', serif;
 }
- 
+*{
+  margin: 1;
+  padding: 0;
+}
+.container{
+  width: 100%;
+  height: 100vh;
+  /*background-color:beige;*/
+  background-size: cover;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
+}
+.card{
+  width: 350px;
+  height: 450px;
+  box-shadow: 0 0 20px 20px rgba(0,0,0,0.26);
+  perspective: 1000px;
+}
+.inner-box{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: 2s;
+}
+.card-back{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  background-color: rgba(90, 56, 2, 0.1);
+  /*background-image: linear-gradient(rgba(13, 13, 121, 0.8),rgba(13, 13, 121, 0.8));/*, url("Images/sign2.jpg"); */
+  padding: 55px;
+  box-sizing: border-box;
+  backface-visibility: hidden;
+}
+
+.card h2{
+  font-weight: 500;
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.input-box{
+  width: 100%;
+  background: transparent;
+  border: 1px solid #fff;
+  margin: 6px 0;
+  height: 32px;
+  border-radius: 20px;
+  padding: 0 10px;
+  box-sizing: border-box;
+  outline: none;
+  text-align: center;
+  color: #fff;
+}
+::placeholder{
+  color: #fff;
+  font-size: 15px;
+}
+button{
+  width: 100%;
+  background: transparent;
+  border: 1px solid #fff;
+  background-color: chocolate;
+  margin: 35px 0 10px;
+  height: 32px;
+  font-size: 14px;
+  border-radius: 20px;
+  padding: 0 10px;
+  box-sizing: border-box;
+  outline: none;
+  color: rgb(12, 12, 12);
+  cursor: pointer;
+}
+.submit-btn{
+  position: relative;
+}
+.submit-btn::after{
+  content: '\27a4';
+  color: #333;
+  line-height: 32px;
+  font-size: 17px;
+  height: 32px;
+  width: 32px;
+  border-radius: 50px;
+  background: #fff;
+  position: absolute;
+  right: -1px;
+  top: -1px;
+}
+span{
+  font-size: 15px;
+  margin-left: 10px;
+}
+.card .btn{
+  margin-top: 70px;
+}
+.card a{
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  font-size: 14px;
+  margin-top: 8px;
+}
+
+.text-center{
+  color: chocolate;
+}
