--- a/src/AuthenticationModule/admin-login/admin-login.component.html
+++ b/src/AuthenticationModule/admin-login/admin-login.component.html
@@ -1,10 +1,12 @@
-<div class="d-flex justify-content-center align-items-center vh-100 bg-light">
-  <div class="card shadow-lg p-4" style="max-width: 400px; width: 100%; border-radius: 10px;">
-    <div class="card-body">
-      <h3 class="text-center text-primary mb-4">Sign In</h3>
+<body style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('assets/userd/image1.JPG'); background-size:contain; background-position:center;">
+  <div class="container">
+    <div class="card">
+      <div class="inner-box" id="card"> 
+          <div class="card-back">
+      <h3 class="text-center mb-4">Sign In</h3>
       <form #loginForm="ngForm" (ngSubmit)="AdminLogin()">
         <!-- Username Field -->
-        <div class="form-group mb-3">
+        <div class="form-group mb-3 ">
           <label for="emailInput" class="form-label">User Name</label>
           <input
             type="text"
@@ -25,10 +27,10 @@
             </span>
           </div>
         </div>
-
+ 
         <!-- Password Field -->
         <div class="form-group mb-4">
-          <label for="passwordInput" class="form-label">Password</label>
+          <label for="passwordInput" class="form-label ">Password</label>
           <input
             type="password"
             class="form-control"
@@ -48,11 +50,11 @@
             </span>
           </div>
         </div>
-
+ 
         <!-- Sign In Button -->
         <button
           type="submit"
-          class="btn btn-primary w-100 mb-3"
+          class="btn btn-primary w-100 mb-3 text-white"
           [disabled]="loginForm.invalid"
         >
           Sign In
@@ -60,4 +62,8 @@
       </form>
     </div>
   </div>
-</div>
+  </div>
+ </div>
+</body>
+ 
+ 
