--- a/src/AuthenticationModule/customer-register/customer-register/customer-register.component.css
+++ b/src/AuthenticationModule/customer-register/customer-register/customer-register.component.css
@@ -2,14 +2,13 @@ body {
     font-family: 'Libre Baskerville', serif;
     margin: 0;
     padding: 0;
-    background-color: beige;
+    
   }
   
   .container {
     width: 80%;
     max-width: 400px;
     height: auto;
-    margin: 50px auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,9 +18,9 @@ body {
   .card {
     width: 100%;
     padding: 20px;
-    background-image: linear-gradient(rgba(13, 13, 121, 0.8),rgba(13, 13, 121, 0.8));
+    /*background-image: linear-gradient(rgb(255, 255, 255,0.1),rgba(255, 255, 255,0.1)); */
+    background-color: rgb(253, 244, 230);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    background-color: white;
     border-radius: 10px;
   }
   
@@ -32,6 +31,7 @@ body {
   
   .form-group {
     margin-bottom: 15px;
+    color: black;
   }
   
   .form-label {
@@ -58,7 +58,7 @@ body {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #007bff;
+    background-color:chocolate;
     color: white;
     font-size: 16px;
     cursor: pointer;
@@ -66,4 +66,10 @@ body {
   
   button:hover {
     background-color: #0056b3;
+  }
+  .text-white {
+    color:chocolate !important;
+  }
+  .text-center{
+    color:chocolate;
   }
