--- a/src/AuthenticationModule/customer-register/customer-register/customer-register.component.html
+++ b/src/AuthenticationModule/customer-register/customer-register/customer-register.component.html
@@ -1,48 +1,38 @@
-<body>
+<body style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('assets/userd/image1.JPG'); background-size:contain; background-position:center;">
+
   <div class="container">
     <div class="card">
-      <h3 class="text-center text-primary">Add New Customer</h3>
+      <h3 class="text-center">Add New Customer</h3>
       <form (ngSubmit)="addCustomer()">
         <div class="form-group">
           <label for="firstNameInput">First Name</label>
           <input type="text" class="form-control" id="firstNameInput" [(ngModel)]="newCustomer.firstName" name="firstName" placeholder="Enter First Name" required>
         </div>
-  
+ 
         <div class="form-group">
           <label for="lastNameInput">Last Name</label>
           <input type="text" class="form-control" id="lastNameInput" [(ngModel)]="newCustomer.lastName" name="lastName" placeholder="Enter Last Name" required>
         </div>
-  
+ 
         <div class="form-group">
           <label for="emailInput">Email</label>
           <input type="email" class="form-control" id="emailInput" [(ngModel)]="newCustomer.email" name="email" placeholder="Enter Email" required>
         </div>
-  
+ 
         <div class="form-group">
           <label for="phoneNumberInput">Phone Number</label>
           <input type="text" class="form-control" id="phoneNumberInput" [(ngModel)]="newCustomer.phoneNumber" name="phoneNumber" placeholder="Enter Phone Number" required>
         </div>
-  
+ 
         <div class="form-group">
-          <label for="streetInput">Street</label>
-          <input type="text" class="form-control" id="streetInput" [(ngModel)]="newAddress.street" name="street" placeholder="Enter Street" required>
+          <label for="addressSelect">Select Address</label>
+          <select class="form-control" id="addressSelect" [(ngModel)]="newCustomer.address" name="address" required>
+            <option *ngFor="let address of addresses" [ngValue]="address">
+              {{ address.street }}, {{ address.city }}, {{ address.state }}
+            </option>
+          </select>
         </div>
-  
-        <div class="form-group">
-          <label for="cityInput">City</label>
-          <input type="text" class="form-control" id="cityInput" [(ngModel)]="newAddress.city" name="city" placeholder="Enter City" required>
-        </div>
-  
-        <div class="form-group">
-          <label for="stateInput">State</label>
-          <input type="text" class="form-control" id="stateInput" [(ngModel)]="newAddress.state" name="state" placeholder="Enter State" required>
-        </div>
-  
-        <div class="form-group">
-          <label for="zipCodeInput">Zip Code</label>
-          <input type="text" class="form-control" id="zipCodeInput" [(ngModel)]="newAddress.zipCode" name="zipCode" placeholder="Enter Zip Code" required>
-        </div>
-  
+ 
         <!-- Centered Button -->
         <div class="btn-container">
           <button type="submit">Add Customer</button>
@@ -51,3 +41,4 @@
     </div>
   </div>
   </body>
+ 
