--- a/src/admin/customer/sample.component.html
+++ b/src/admin/customer/sample.component.html
@@ -1,6 +1,6 @@
 <div>
     <h1>Customers</h1>
-    <button (click)="toggleAddCustomerForm()">Add Customer</button>
+    <!-- <button (click)="toggleAddCustomerForm()">Add Customer</button>
    
     <div *ngIf="showAddCustomerForm">
       <h2>Add New Customer</h2>
@@ -25,7 +25,7 @@
         <input [(ngModel)]="newAddress.zipCode" name="zipCode" required>
         <button type="submit">Add Customer</button>
       </form>
-    </div>
+    </div> -->
    
     <div *ngIf="errorMessage">{{ errorMessage }}</div>
    
