--- a/src/admin/transaction/transaction.component.html
+++ b/src/admin/transaction/transaction.component.html
@@ -1,6 +1,6 @@
 <div>
     <h1>Transactions</h1>
-    <button (click)="toggleAddTransactionForm()">Add Transaction</button>
+    <!-- <button (click)="toggleAddTransactionForm()">Add Transaction</button>
  
     <div *ngIf="showAddTransactionForm">
       <h2>Add New Transaction</h2>
@@ -20,7 +20,7 @@
         </select>
         <button type="submit">Add Transaction</button>
       </form>
-    </div>
+    </div> -->
  
     <div *ngIf="errorMessage">{{ errorMessage }}</div>
  
